[tool.poetry]
name = "laboratorios"
version = "0.1.0"
description = "Laboratorios de análisis de datos"
authors = ["Brian_Ruiz <ah.newera@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"